[project]
name = "coolqbot"
version = "0.26.2"
description = "基于 NoneBot2 的聊天机器人"
authors = [{ name = "uy_sun", email = "hmy0119@gmail.com" }]
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.13.7"
dependencies = [
    "pydantic>=2.11.7",
    "eorzeaenv>=2.2.11",
    "matplotlib>=3.10.5",
    "uvicorn[standard]>=0.35.0",
    "uvicorn-worker>=0.3.0",
    "gunicorn>=23.0.0",
    "nonebot2[aiohttp,fastapi,httpx,websockets]>=2.4.3",
    "nb-cli>=1.4.2",
    "nonebot-adapter-discord>=0.1.8",
    "nonebot-adapter-dodo>=0.2.1",
    "nonebot-adapter-kaiheila>=0.3.4",
    "nonebot-adapter-onebot>=2.4.6",
    "nonebot-adapter-qq>=1.6.5",
    "nonebot-adapter-red>=0.9.0",
    "nonebot-adapter-satori>=0.13.7",
    "nonebot-adapter-telegram>=0.1.0b20",
    "nonebot-plugin-wordcloud>=0.9.0",
    "nonebot-plugin-treehelp>=0.5.0",
    "nonebot-plugin-user[inspect]>=0.5.3",
    "nonebot-plugin-alisten>=0.4.0",
    "nonebot-plugin-orm[default]>=0.8.2",
    "nonebot-plugin-apscheduler>=0.5.0",
    "nonebot-plugin-send-anything-anywhere>=0.7.1",
    "nonebot-plugin-alconna>=0.59.4",
    "nonebot-plugin-datastore>=1.3.1",
    "nonebot-plugin-localstore>=0.7.4",
    "nonebot-session-to-uninfo>=0.0.2",
    "nonebot-plugin-sentry>=2.0.0",
    "nonebot-plugin-memes==0.8.1",
    "nonebot-bison==0.9.9",
    "nonebot-plugin-status==0.9.0",
    "nonebot-plugin-deepseek==0.1.10",
    "nonebot-plugin-prometheus==0.3.17",
    "nonebot-plugin-zssm==0.3.7",
    "nonebot-plugin-abs==1.0.1",
]

[project.urls]
Homepage = "https://github.com/he0119/CoolQBot"
Repository = "https://github.com/he0119/CoolQBot.git"
Issues = "https://github.com/he0119/CoolQBot/issues"
Changelog = "https://github.com/he0119/CoolQBot/blob/main/CHANGELOG.md"

[tool.uv]
dev-dependencies = [
    "nonebug>=0.4.3",
    "nonebug-saa>=0.5.0",
    "pytest-cov>=6.2.1",
    "pytest-mock>=3.14.1",
    "pytest-xdist>=3.8.0",
    "pytest-asyncio>=1.1.0",
    "pytest-loguru>=0.4.0",
    "respx>=0.22.0",
    "freezegun>=1.5.5",
    "beautifulsoup4>=4.13.5",
    "bump-my-version>=1.2.1",
    "poethepoet>=0.37.0",
    "inline-snapshot>=0.28.0",
]

# eorzeaenv 与 bison 的 rapidfuzz 依赖会冲突，经测试 eorzeaenv 也支持 3.x 的版本
override-dependencies = ["rapidfuzz>=3.0.0,<4.0.0"]

[tool.uv.pip]
universal = true

[tool.poe.tasks]
test = "pytest --cov=src --cov-report xml --junitxml=./junit.xml -n auto"
bump = "bump-my-version bump"
show-bump = "bump-my-version show-bump"
"gen:fflogs" = "python src/plugins/ff14/plugins/ff14_fflogs/generate_fflogs_data.py"
"gen:holidays" = "python src/plugins/morning/plugins/morning_greeting/generate_holidays.py"

[tool.nonebot]
plugin_dirs = ["src/plugins"]
plugins = [
    "nonebot_plugin_sentry",
    "nonebot_plugin_treehelp",
    "nonebot_plugin_wordcloud",
    "nonebot_plugin_alisten",
    "nonebot_plugin_memes",
    "nonebot_bison",
    "nonebot_plugin_status",
    "nonebot_plugin_deepseek",
    "nonebot_plugin_prometheus",
    "nonebot_plugin_inspect",
    "nonebot_plugin_zssm",
    "nonebot_plugin_abs",
]

[tool.pyright]
pythonVersion = "3.13"
pythonPlatform = "All"
typeCheckingMode = "standard"

[tool.ruff]
line-length = 120
target-version = "py313"

[tool.ruff.format]
line-ending = "lf"

[tool.ruff.lint]
select = [
    "W",   # pycodestyle warnings
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "UP",  # pyupgrade
    "C4",  # flake8-comprehensions
    "T10", # flake8-debugger
    "T20", # flake8-print
    "PYI", # flake8-pyi
    "PT",  # flake8-pytest-style
    "Q",   # flake8-quotes
    "TC",  # flake8-type-checking
    "RUF", # Ruff-specific rules
    "I",   # isort
]
ignore = [
    "E402",   # module-import-not-at-top-of-file
    "E501",   # line-too-long
    "RUF001", # ambiguous-unicode-character-string
    "RUF002", # ambiguous-unicode-character-docstring
    "RUF003", # ambiguous-unicode-character-comment
]

[tool.coverage.report]
omit = ["*/migrations/*"]

[tool.pytest.ini_options]
addopts = ["--import-mode=importlib"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"

[tool.bumpversion]
current_version = "0.26.2"
commit = true
message = "chore(release): {new_version} [skip ci]"

[[tool.bumpversion.files]]
filename = "pyproject.toml"
search = "version = \"{current_version}\""
replace = "version = \"{new_version}\""

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
search = "## [Unreleased]"
replace = "## [Unreleased]\n\n## [{new_version}] - {now:%Y-%m-%d}"

[[tool.bumpversion.files]]
filename = "CHANGELOG.md"
regex = true
search = "\\[Unreleased\\]: (https://.+?)v{current_version}\\.\\.\\.HEAD"
replace = "[Unreleased]: \\1v{new_version}...HEAD\n[{new_version}]: \\1v{current_version}...v{new_version}"

[[tool.bumpversion.files]]
filename = "uv.lock"
search = "name = \"coolqbot\"\nversion = \"{current_version}\""
replace = "name = \"coolqbot\"\nversion = \"{new_version}\""
